[gd_scene load_steps=4 format=3 uid="uid://bu7e468wej0et"]

[ext_resource type="PackedScene" uid="uid://c0mw0jwbq1np4" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/input_templateBuffer.tscn" id="2"]
[ext_resource type="PackedScene" uid="uid://b0x40ln8a6syy" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_Label_Template.tscn" id="3"]
[ext_resource type="Script" path="res://addons/fart_engine/Database_Manager/Scenes and Scripts/UI_Input_Scenes/Input_MinMax.gd" id="4"]

[node name="MinMax" type="VBoxContainer"]
anchors_preset = 15
anchor_right = 1.0
anchor_bottom = 1.0
grow_horizontal = 2
grow_vertical = 2
size_flags_horizontal = 3
script = ExtResource("4")
label_text = "MinMax"

[node name="Label" parent="." instance=ExtResource("3")]
layout_mode = 2

[node name="HBox2" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 25)
layout_mode = 2

[node name="X" type="Label" parent="HBox2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Min"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Y" type="Label" parent="HBox2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Current"
horizontal_alignment = 1
vertical_alignment = 1

[node name="Z" type="Label" parent="HBox2"]
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 1
text = "Max"
horizontal_alignment = 1
vertical_alignment = 1

[node name="HBox3" type="HBoxContainer" parent="."]
custom_minimum_size = Vector2(0, 50)
layout_mode = 2
size_flags_horizontal = 3
size_flags_vertical = 3

[node name="Input" type="LineEdit" parent="HBox3"]
visible = false
layout_mode = 2
size_flags_horizontal = 3
text = "(0,0,0)"
placeholder_text = "Enter Value As Text"
max_length = 45
caret_blink = true

[node name="InputX" type="LineEdit" parent="HBox3"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
placeholder_text = "Enter Value As Text"
alignment = 1
max_length = 45
caret_blink = true

[node name="InputY" type="LineEdit" parent="HBox3"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
placeholder_text = "Enter Value As Text"
alignment = 1
max_length = 45
caret_blink = true

[node name="InputZ" type="LineEdit" parent="HBox3"]
layout_mode = 2
size_flags_horizontal = 3
text = "0"
placeholder_text = "Enter Value As Text"
alignment = 1
max_length = 45
caret_blink = true

[node name="input_templateBuffer" parent="." instance=ExtResource("2")]
layout_mode = 2

[connection signal="text_changed" from="HBox3/InputX" to="." method="_on_InputX_text_changed"]
[connection signal="text_changed" from="HBox3/InputY" to="." method="_on_InputY_text_changed"]
[connection signal="text_changed" from="HBox3/InputZ" to="." method="_on_InputZ_text_changed"]
